test/fail/match17.v3
//@seman =MatchError @ 7:20
component match17 {
	def A: int = 0;
	def B: int = 1;
	def C: int = 1;
	def a() {
		match(0) {
			A: {}
			B, C: {}
		}
	}
}
